fixed numbering in 2019 W27-28

--- a/2019/W27-28/W27-28.md
+++ b/2019/W27-28/W27-28.md
@@ -4,9 +4,9 @@
 此次活动仅计算每位特工活动期间hack的不同portal的数量。即hack活动之前已经hack过的portal也会计数。
 
 若活动期间全球每位特工的UPH加总数量达到1300万，则会有以下奖励：
-①在活动期间积累的UPH计入一块新的限时游戏内奖章，该奖章分为100，350，750三个等级
-②7月30日凌晨1时至8月8日凌晨1时期间，hack portal的冷却时间减至4分钟，hack或攻击敌方portal受到反击的伤害减少
-③8月2日凌晨1时至8月6日凌晨1时期间，每位特工可以在每个portal上插L8与L7的脚各两支，L6与L5的脚各四支
+1. 在活动期间积累的UPH计入一块新的限时游戏内奖章，该奖章分为100，350，750三个等级
+2. 7月30日凌晨1时至8月8日凌晨1时期间，hack portal的冷却时间减至4分钟，hack或攻击敌方portal受到反击的伤害减少
+3. 8月2日凌晨1时至8月6日凌晨1时期间，每位特工可以在每个portal上插L8与L7的脚各两支，L6与L5的脚各四支
 
 若未达1300万，则在②对应时间内hack portal的冷却时间增至6分钟，hack或攻击敌方portal的伤害亦会增加。
 
